incorporation of non - gdp practices

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -277,7 +277,7 @@ A summary of a book chapter [@chesterman_game_2023] exploring these issues with 
 
 ### The interrelationship of GDPs and the development of technical processes
 
-Given the limited focus of this thesis, only one dimension of personal appropriation is included here: the technical implementation of coding structures. The implementation of GDPs can encourage participants to adopt or share technical processes in various ways. These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community. To integrate new or adapt existing game design patterns in their games, participants needed to develop unfamiliar technical processes associated with computer coding, as well as foundational digital skills related to using a desktop personal computer. See Appendix Digital Literacy for further details. One example of a skill developed by many participants was proficiency in keyboard and mouse use. Combined with navigation of internet browser tabs, this facilitated movement between computer code, game prototypes and supporting web-based documentation. Such personal appropriation and increasing fluidity are well illustrated in Toby’s repeated, solo, incremental changes to level design, as seen in V1.a. Most participants demonstrated increased fluency, particularly in areas such as creating, uploading and integrating graphical assets, adjusting game challenges by modifying GDP elements, and engaging in coding processes such as debugging and code patching, which is explored later. In line with CHAT theory, this can be interpreted as the operationalisation of actions that were previously explicitly taught or learned, as discussed by Leontiev [@leontiev_activity_2009].
+Given the limited focus of this thesis, only one dimension of personal appropriation is included here: the technical implementation of coding structures. The implementation of GDPs can encourage participants to adopt or share technical processes in various ways. These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community. To integrate new or adapt existing game design patterns in their games, participants needed to develop unfamiliar technical processes associated with computer coding, as well as foundational digital skills related to using a desktop personal computer. See Appendix Digital Literacy for further details. One example of a skill developed by many participants was proficiency in keyboard and mouse use. Combined with navigation of internet browser tabs, this facilitated movement between computer code, game prototypes and supporting web-based documentation. Such personal appropriation and increasing fluidity are well illustrated in Toby’s repeated, solo, incremental changes to level design, as seen in V1.a. Most participants demonstrated increased fluency, particularly in areas such as creating, uploading and integrating graphical assets, adjusting game challenges by modifying GDP elements, and engaging in coding processes such as debugging and code patching, which is explored later. In line with CHAT theory, this can be interpreted as the operationalisation of actions that were previously required more careful attention, as discussed by Leontiev [@leontiev_activity_2009].
 
 While the use of new techniques was driven by the implementation of GDPs, the following observations reveal a complex and interdependent relationship between GDP concepts and emergent technical processes. In line with Rogoff's understanding of personal appropriation as bi-directional, where the appropriation of personal knowledge is shaped by and contributes to a broader sociocultural context, participants fed their interpretations of knowledge back into the communities of which they were a part. In this case, this was the game-making community. In this process, GDPs functioned as conceptual tools and structured project stages that facilitated this interpersonal exchange, as explored in the following example. In Vignette 5, sections V5.a and V5.c, Madiha seeks assistance from her daughter Nasrin to format and export graphical files for use in the game code project. The implementation of her chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. Changing pen colours in the graphical tool, for example, is a process Nasrin has already internalised and performs effortlessly, whereas Madiha is still consciously building her competency. Nasrin has operationalised the process, incorporating it into her repertoire of practices. Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game.
 
@@ -500,9 +500,7 @@ Toby adopts different working arrangements dependent on which family members he 
 
 While the context of the participants as families involved in home education makes any general claims difficult, these observations support  exist in other research in this domain. For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work parents can fulfil several,reciprocal roles including, collaborator, resource provider, learner, non-technical consultant and emotional support [@barron_parents_2009].
 
-Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident these roles [@roque_im_2016] in a way which mirrors the use of helpers this phase of my study.
-
-While these examples involve GDPs others are explore in relation to development of agency in the following chapter. The examples above illustrate, part some of the varied strategies to  divisions of labour adopted by participants at times involving  complex tensions in activity. For example  Madiha and Nasrin reversed traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPS but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
+Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident these roles [@roque_im_2016] in a way which mirrors the use of helpers this phase of my study (see Chapter 4). While these examples involve GDPs others are explore in relation to development of agency in the following chapter. The examples above illustrate, part some of the varied strategies to  divisions of labour adopted by participants at times involving  complex tensions in activity. For example  Madiha and Nasrin reversed traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPS but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
 
 Similarly, while Tehillah's activity away from the screen  while non-productive within the scope of technical progress, can be characterised as legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014].  Indeed the possibility for children to _not_ engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
 
@@ -674,29 +672,25 @@ This section has explored the use of GDPs within strategies and processes that o
 
 <!-- **TADS / sannino vs gutierrez - and the purpose of inclusivity / equity** -->
 
-This section continues analysis of the diverse roles of GDPs the game making activity using CHAT concepts including: GDP use as mediational tools, as incorporated part of wider repertoires of practice, and the role of GDPs within participant development of transformational agency.
-BUT THIS IS NEXT CHAPTER TOO.
+This section begins an interpretation of the diverse roles of GDPs the game making activity using CHAT concepts, this analysis is continued in the following chapter. Addressing GDPs as a mediational tool. Chapter 5 outlined design decisions and this chapter explored the impact. For example, the uses of the quick start activities, tutorials and code snippets as supporting tools, if viewed in isolation can been as more straight forward, triangular form of subject, tool, object mediation (see Chapter 4 diagram). This chapter and the evolution of the learning design exposed tensions where existing meditational strategies or tools were insufficient and thus innovative form of mediation were needed. Elements of the innovation in the toolset of learning design from P1 to P2 based on emerging needs of the participants exemplify this (is an example needed). In line with Sannino[], this study frames such innovation within CHAT as transformational agency (see Chapter 7).  
 
-Addressing GDPs as a mediational tool. Chapter 5 outlined design decisions and this chapter explored the impact. For example, the uses of the quick start activities, tutorials and code snippets as supporting tools, if viewed in isolation can been as more straight forward, triangular form of subject, tool, object mediation (see Chapter 4 diagram).
+By way of contrast, Gutiérrez's focus on on movement of identity between settings repertoires of practice draws on the importance of wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44.   Gutiérrez's sees a role of facilitators to facilitate this via learning design.
 
-Turning to repertoires, other non-GDP elements of the learning design are mixed together in these emerging repertoires and thus to neglect to explore them would give an incomplete picture. Gutiérrez's focus on repertoires of practice draws on the importance of wider cultural focus of the learning process.
+I began to recognise the process of non-technical and non-GDP elements of the learning process being incorporated in emerging repertoires. This is especially noticeable in the above sections on use of FoK and division of labour. Similar to the way tools were modified to provide new affordances for participants, in P3 I began to encourage this process by introduced several activities.
 
-    Such a perspective on the relationship between culture and learning is also about attention to the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44
 
-Of particular relevance here is Gutiérrez's focus on movement of identity between settings and the role of facilitators to facilitate this via learning design.
 
-In this chapter's discussion this wider focus on cultural elements is addressed via an exploration of flexible approaches to the design practice, it is also explored in the following chapter in an exploration of the evolving culture of this communities playtesting practices.
+<!-- While some social and non-technical processes had been part of the overall sessions in P1 and 2,   -->
 
-The third aspect is the more experimental, innovative form of mediation within TADS [Sannio].
+<!-- In this chapter's discussion this wider focus on cultural elements is addressed via an exploration of flexible approaches to the design practice. -->
 
-This aspect is explored to an extent here, SAY HOW, but is also taken up in more detail in the following chapter.
-
+<!-- Such a perspective on the relationship between culture and learning is also about attention to the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44 -->
 
 <!-- And following that the link to inclusive linguistic element of the pedagogy which can be aligned with other inclusive practices of UDL. In this study the focus is less on aspects of ethnical cultural elements and more the those related to neurodiversity.
 IS THERE SPACE FOR THIS here - IF SO WHERE? - NEXT CHAPTER PROBABLY  -->
 
 
-<!-- ### Observations and analysis on interventions to aid construction of repertoires of practice
+<!-- ### Observations and analysis oninterventions to aid construction of repertoires of practice
 
 Bring in elements of side missions, drama process and maker types.
 
@@ -754,7 +748,6 @@ Thus I am not suggesting that these styles make up a ridgid typology to be repli
 ### Observations on emerging design practices
 
 <!-- NOTE To restructure. -->
-
 
 
 In the previous chapter I outlined this learning design as aligned more with a step-based approach than a design-build-test one.  As mentioned in Chapter 3, the process of examining video data also did not align with common design thinking stages as I initially thought might be the case. The stages were instead fragmented and sometimes happened in parallel. In many interactions I observed improvisational approaches which incorporated ideation, planning, implementation and testing in space of a minute or so. If I had encouraged participants to follow prescribed design stages this may have restrict this flexibility in practice. This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.  [@kuby_rhizomatic_2016]
