--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -660,8 +660,8 @@ In addition to the propagation of GDPs offered in the menu of supporting documen
 
 
 <!-- **synthesis of this section** -->
+This section has explored the use of GDPs within strategies and processes that occur at a community level.
 
-This section has explored the use of GDPs within strategies and processes that occur at a community level in a way that demonstrates the transfer between different activity systems, supporting Gutiérrez's perspective [@gutierrez_developing_2008] regarding the importance of transcending borders and linguistic practices between sites of learning. Playtesting served as a medium for a shared idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present. The role of playtesting and other community interactions, including warm-up games and session reflections, are explored in relation to the development of agency in the following chapter.
 
 
 
@@ -674,68 +674,62 @@ This section has explored the use of GDPs within strategies and processes that o
 
 This section begins an interpretation of the diverse roles of GDPs the game making activity using CHAT concepts, this analysis is continued in the following chapter. Addressing GDPs as a mediational tool. Chapter 5 outlined design decisions and this chapter explored the impact. For example, the uses of the quick start activities, tutorials and code snippets as supporting tools, if viewed in isolation can been as more straight forward, triangular form of subject, tool, object mediation (see Chapter 4 diagram). This chapter and the evolution of the learning design exposed tensions where existing meditational strategies or tools were insufficient and thus innovative form of mediation were needed. Elements of the innovation in the toolset of learning design from P1 to P2 based on emerging needs of the participants exemplify this (is an example needed). In line with Sannino[], this study frames such innovation within CHAT as transformational agency (see Chapter 7).  
 
-By way of contrast, Gutiérrez's focus on on movement of identity between settings repertoires of practice draws on the importance of wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44.   Gutiérrez's sees a role of facilitators to facilitate this via learning design.
-
-I began to recognise the process of non-technical and non-GDP elements of the learning process being incorporated in emerging repertoires. This is especially noticeable in the above sections on use of FoK and division of labour. Similar to the way tools were modified to provide new affordances for participants, in P3 I began to encourage this process by introduced several activities.
 
 
 
-<!-- While some social and non-technical processes had been part of the overall sessions in P1 and 2,   -->
 
-<!-- In this chapter's discussion this wider focus on cultural elements is addressed via an exploration of flexible approaches to the design practice. -->
-
-<!-- Such a perspective on the relationship between culture and learning is also about attention to the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44 -->
-
-<!-- And following that the link to inclusive linguistic element of the pedagogy which can be aligned with other inclusive practices of UDL. In this study the focus is less on aspects of ethnical cultural elements and more the those related to neurodiversity.
-IS THERE SPACE FOR THIS here - IF SO WHERE? - NEXT CHAPTER PROBABLY  -->
+By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on on movement of identity between settings repertoires of practice draws on the importance of wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44. Gutiérrez's sees a role of facilitators to facilitate this via learning design.
 
 
-<!-- ### Observations and analysis oninterventions to aid construction of repertoires of practice
+In this chapter the last section examining activity on cultural plane exposed, elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective  regarding the importance of transcending borders and linguistic practices between sites of learning. In these examples, the process of playtesting often served as a facilitation medium for a shared idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present. The role of playtesting and other community interactions, including warm-up games and session reflections, are explored in relation to the development of agency in the following chapter.
 
-Bring in elements of side missions, drama process and maker types.
-
-HOW EXACTLY TO DO THIS - AND IS THIS THE RIGHT PLACE?
-OR NEXT CHAPTER?
-OR DROP? -->
-
-
-### Interventions to facilitate emergent social and cultural activities in evolving idioculture
-
-Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping.
+#### Interventions to facilitate emergent social and cultural activities in evolving idioculture
 
 To support the development of similar emerging practices which drew on FoK, I introduced, social missions, drama frame and concepts of maker types.
 
 I propose that new GDPs elements can be integrated with existing home repertoires of practice to form novel flexible design practices.
 
-### Observations on making styles
+**Maker styles**   
 
-This section returns to game making types explored in Chapter 5. TO DEVELOP
+I began to recognise the process of non-technical and non-GDP elements of the learning process being incorporated in emerging repertoires. This is especially noticeable in the above sections on use of FoK and division of labour.
+OTHER EXAMPLES
+
+Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping.
 
 For examples in the Vignette of S and T's interaction we can see attributes of the child as a Glitcher. In terms of understanding of the game as a dynamic system, this is seen clearly in the parent's alarm at the child's deletion of all elements of hazard. The parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." The child seems determined to remove all hazards. My understanding is that she is also aware of implications for game balance but is taking pleasure in this seeming destruction of the key challenge of the game as an act of disruptive play.
+
+WHERE TO PUT THIS EXAMPLE? HERE OR BEFORE? AND IF HERE DEVELOP ANALYSIS IN LINE WITH THEORY?
 
 
 Other players created impossible or overly easy game levels. They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
 
-**Side-missions**
+Thus
 
-The process of exploring identity via side missions in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practitioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
+Similar to the way tools were modified to provide new affordances for participants, in P3 I began to encourage these process by introduced several activities to augment the affordances of the playtesting medium.
+
+This section returns to game making types explored in Chapter 5. TO DEVELOP
+
+<!-- In this chapter's discussion this wider focus on cultural elements is addressed via an exploration of flexible approaches to the design practice. -->
 
 
-In retrospect, many of the social missions explored above encouraged activity outside of strictly productive design activities. For example the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_.
+<!-- And following that the link to inclusive linguistic element of the pedagogy which can be aligned with other inclusive practices of UDL. In this study the focus is less on aspects of ethnical cultural elements and more the those related to neurodiversity.
+IS THERE SPACE FOR THIS here - IF SO WHERE? - NEXT CHAPTER PROBABLY  -->
 
-### Discussion on Player types / Side missions
+
+
+**Discussion on Player types**
 
 <!-- DATA REQUIRED FROM VIDEO!? -->
 
 The process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practitioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
 
-As an example some players created impossible or overly easy game levels. They appeared aware of implications for game balance but is taking pleasure in this seeming destruction of the key challenge of the game as an act of disruptive play. They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
-
-Below I outline how I designed to encourage this behaviour.
 
 My rationale for this process was to promote awareness of pluralistic programming process [@papert_epistemological_1990].
-
 I wanted to try to communicate a message to participants that when you are learning something hard it is of value follow your own working preferences and try to discover a creative style that suits you.
+
+AND LINGUISTIC DEVELOPMENT?
+
+
 
 **Limits of maker types**
 
@@ -743,6 +737,13 @@ Begin discussion with reference to [@gutierrez_cultural_2003] on "Helping Studen
 
 Thus I am not suggesting that these styles make up a ridgid typology to be replicated in other settings, instead, in line with Gutierrez and Rogoff [-@gutierrez_cultural_2003, p.20] , that the process of co-constructing understanding and communication about learning styles can "support the changing nature of participation and the forms of assistance provided in joint activity."
 
+
+**Side-missions**
+
+The process of exploring identity via side missions in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practitioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
+
+
+In retrospect, many of the social missions explored above encouraged activity outside of strictly productive design activities. For example the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_.
 
 
 ### Observations on emerging design practices
@@ -767,11 +768,10 @@ As typified in vignette 1 and 5 , some younger participants in particular develo
 At other times design processes were experimental with no clear end goal. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvised process created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies "I'm just going with it."
 
 
-
 Addressing a separate aspect of reflection, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress. Additionally in P3, GDPs were prominent in end of session reflections (see Vignette 10)
 
 **Lingua Franca return?:**
-The examples of this chapter show the importance of GDPS as a lingua franca to facilitate these kinds of flexible responsive collaboration.
+The examples of this chapter show the importance of GDPS as a lingua franca, as a mediational strategy to facilitate these kinds of flexible responsive collaboration.
 
 
 
