--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -681,7 +681,13 @@ This section begins an interpretation of the diverse roles of GDPs the game maki
 By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on on movement of identity between settings repertoires of practice draws on the importance of wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44. Gutiérrez's sees a role of facilitators to facilitate this via learning design.
 
 
-In this chapter the last section examining activity on cultural plane exposed, elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective  regarding the importance of transcending borders and linguistic practices between sites of learning. In these examples, the process of playtesting often served as a facilitation medium for a shared idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present. The role of playtesting and other community interactions, including warm-up games and session reflections, are explored in relation to the development of agency in the following chapter.
+In this chapter the last section examining activity on cultural plane exposed, elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective  regarding the importance of transcending borders and linguistic practices between sites of learning. In these examples, the process of playtesting often served as a facilitative medium for a shared idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present.
+
+In the following section I briefly explore some facilitator introduced community interactions as a way to prepare for a discussion in relation to the development of agency in the following chapter
+
+<!-- the role of playtesting and including warm-up games and session reflections -->
+
+<!-- are explored in relation to the development of agency in the following chapter. -->
 
 #### Interventions to facilitate emergent social and cultural activities in evolving idioculture
 
