on maker types etc

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -721,19 +721,26 @@ This section returns to game making types explored in Chapter 5. TO DEVELOP
 <!-- And following that the link to inclusive linguistic element of the pedagogy which can be aligned with other inclusive practices of UDL. In this study the focus is less on aspects of ethnical cultural elements and more the those related to neurodiversity.
 IS THERE SPACE FOR THIS here - IF SO WHERE? - NEXT CHAPTER PROBABLY  -->
 
+**Side-missions**
+
+The process of exploring identity via side missions in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practitioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
 
 
-**Discussion on Player types**
+In retrospect, many of the social missions explored above encouraged activity outside of strictly productive design activities. For example the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_.
+
+**Discussion on Player types and side-missions**
 
 <!-- DATA REQUIRED FROM VIDEO!? -->
 
 The process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practitioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
 
+Recalling the barriers to participation explored in Chapter 2, my rationale for this process was to promote awareness of pluralistic programming process [@papert_epistemological_1990].
 
-My rationale for this process was to promote awareness of pluralistic programming process [@papert_epistemological_1990].
+
+
 I wanted to try to communicate a message to participants that when you are learning something hard it is of value follow your own working preferences and try to discover a creative style that suits you.
 
-AND LINGUISTIC DEVELOPMENT?
+AND LINGUISTIC DEVELOPMENT? LATER?
 
 
 
@@ -744,12 +751,7 @@ Begin discussion with reference to [@gutierrez_cultural_2003] on "Helping Studen
 Thus I am not suggesting that these styles make up a ridgid typology to be replicated in other settings, instead, in line with Gutierrez and Rogoff [-@gutierrez_cultural_2003, p.20] , that the process of co-constructing understanding and communication about learning styles can "support the changing nature of participation and the forms of assistance provided in joint activity."
 
 
-**Side-missions**
 
-The process of exploring identity via side missions in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practitioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
-
-
-In retrospect, many of the social missions explored above encouraged activity outside of strictly productive design activities. For example the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_.
 
 
 ### Observations on emerging design practices
